--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,4 +61,10 @@ file:
   upload:
     location: ${user.home}/fish/uploads/
 
+# Gemini API key
+gemini:
+  api:
+    key: AIzaSyAVPMezK5t4XcORBkBDiBWZ8eHS9G-SvWI
+    endpoint: https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+
 
