--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,10 +61,7 @@ file:
   upload:
     location: ${user.home}/fish/uploads/
 
-# Gemini API key
-gemini:
-  api:
-    key: AIzaSyAVPMezK5t4XcORBkBDiBWZ8eHS9G-SvWI
-    endpoint: https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
-
-
+jwt:
+  secret-key: L6h/xMxGO53HQmR/OB99qR/y0kTr2CAyaI5RqBIX184=  # 토큰발급시와 토큰위조검사시 사용할 서명
+  access-token-validity-time: 3600000  # 1시간 (ms)
+  refresh-token-validity-time: 604800000 # 7일 (ms)
