--- a/build.gradle
+++ b/build.gradle
@@ -64,3 +64,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar {
+    archiveFileName = 'dockerdemo-0.0.1-SNAPSHOT.jar'
+}
