--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -21,7 +21,13 @@ jobs:
 
       - name: Write the application.yml
         run: |
-          echo "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
+          cat <<EOF > ./src/main/resources/application.yml
+          "${{ secrets.APPLICATION_YML }}"
+          EOF
+#        run: |
+#          echo "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
+
+
 
 
       ## springboot 도커 이미지 빌드 후 도커허브에 push하기
