--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -21,7 +21,11 @@ jobs:
 
       - name: Write the application.yml
         run: |
-          echo "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
+          cat <<EOF > ./src/main/resources/application.yml
+          ${{ secrets.APPLICATION_YML }}
+          EOF
+#        run: |
+#          echo "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
 
 
 
