--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -19,24 +19,20 @@ jobs:
       - name: Make directory for deliver
         run: mkdir deploy
 
-      - name: Check shell environment
-        run: |
-          echo "Shell: $SHELL"
-          ps -p $$
-
       - name: Write the application.yml
+        shell: bash
         run: |
-          echo "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
+          cat <<'EOF' > ./src/main/resources/application.yml
+          ${{ secrets.APPLICATION_YML }}
+          EOF
+          cat ./src/main/resources/application.yml  # 확인용
 
-
-      ## springboot 도커 이미지 빌드 후 도커허브에 push하기
-      - name: web springboot docker build and push
+      - name: Web Spring Boot Docker build and push
         run: |
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
           docker build --no-cache -t cafephilia/joayong-api:latest .
           docker push cafephilia/joayong-api:latest
 
-      # 도커 허브에서 jar파일 및 pull
       - name: Deploy to Dev
         uses: appleboy/ssh-action@master
         with:
@@ -46,25 +42,8 @@ jobs:
           script: |
             echo "Docker login..."
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-            
-            echo "Write the docker-compose.yml"
             echo "${{ secrets.DOCKER_COMPOSE_YML }}" > ./docker-compose.yml
-            
-            echo "Stopping existing container..."
             docker-compose down || true
-            
-            echo "Remove Existing Docker image..."
             docker rmi cafephilia/joayong-api:latest || true
-            
-            echo "Pulling Docker image..."
             docker pull cafephilia/joayong-api:latest
-            
-            echo "Starting new container..."
-            docker-compose up -d 
-
-
-#            echo "Stopping existing container..."
-#            docker stop event-api-container || true
-#            docker rm event-api-container || true
-#            echo "Starting new container..."
-#            docker run -d -p 80:80 --name event-api-container soongu/event-api:latest
+            docker-compose up -d
