--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -19,17 +19,15 @@ jobs:
       - name: Make directory for deliver
         run: mkdir deploy
 
-      - name: Write the application.yml
-        shell: bash
-        run: |
-          cat <<'EOF' > ./src/main/resources/application.yml
-          ${{ secrets.APPLICATION_YML }}
-          EOF
-          cat ./src/main/resources/application.yml  # 확인용
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test
+
+      - name: Check directory contents
+        run: ls -la build/libs/
 
       - name: Web Spring Boot Docker build and push
         run: |
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
           docker build --no-cache -t cafephilia/joayong-api:latest .
           docker push cafephilia/joayong-api:latest
 
